# projicio

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/projicio-cli/: Cargo.toml
crates/projicio-cli/src/: main.rs
crates/projicio-core/: Cargo.toml
crates/projicio-core/benches/: projections.rs
crates/projicio-core/src/: ellipsoid.rs  error.rs  lib.rs  ntv2.rs  projection.rs  transform.rs
crates/projicio-core/tests/: proptest_projicio.proptest-regressions  proptest_projicio.rs
docs/: index.html
