[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TileTopia-HQ/projicio"
authors = ["TileTopia <tiletopia@proton.me>"]
description = "Coordinate reference system transformations"
rust-version = "1.85"

[workspace.dependencies]
projicio-core = { path = "crates/projicio-core" }
