[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/GeoLang/projicio"
authors = ["GeoLang <tiletopia@proton.me>"]
description = "Coordinate reference system transformations"
rust-version = "1.85"

[workspace.dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
projicio-core = { path = "crates/projicio-core" }
